@@ -187,3 +187,14 @@ Error: This expression has type int but an expression was expected of type
          bool
        because it is in a when-guard
 |}];;
+
+(* #10106 *)
+if false then (match () with () -> true);;
+[%%expect{|
+Line 1, characters 35-39:
+1 | if false then (match () with () -> true);;
+                                       ^^^^
+Error: This variant expression is expected to have type unit
+         because it is in the result of a conditional with no else branch
+       The constructor true does not belong to type unit
+|}]
